<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsAlbumFragment">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/album_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_label"
        style="@style/styleTextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sl"
        android:text="@string/album_titre"
        app:layout_constraintBottom_toTopOf="@id/tv_realise_label"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/styleTextH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_label"
        app:layout_constraintStart_toEndOf="@id/tv_title_label"
        app:layout_constraintTop_toTopOf="@id/tv_title_label"
        tools:text="Franky Knight" />

    <TextView
        android:id="@+id/tv_realise_label"
        style="@style/styleTextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_date_realisation"
        app:layout_constraintBottom_toTopOf="@id/tv_artist_label"
        app:layout_constraintStart_toStartOf="@id/tv_title_label"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_realise"
        style="@style/styleTextH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/tv_realise_label"
        app:layout_constraintStart_toEndOf="@id/tv_realise_label"
        app:layout_constraintTop_toTopOf="@id/tv_realise_label"
        tools:text="2011-01-01" />

    <TextView
        android:id="@+id/tv_artist_label"
        style="@style/styleTextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_artist"
        app:layout_constraintBottom_toTopOf="@id/tv_available_label"
        app:layout_constraintStart_toStartOf="@id/tv_title_label"
        app:layout_constraintTop_toBottomOf="@id/tv_realise_label" />

    <TextView
        android:id="@+id/tv_artist"
        style="@style/styleTextH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/tv_artist_label"
        app:layout_constraintStart_toEndOf="@id/tv_artist_label"
        app:layout_constraintTop_toTopOf="@id/tv_artist_label"
        tools:text="Émilie Simon" />

    <TextView
        android:id="@+id/tv_available_label"
        style="@style/styleTextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_available"
        app:layout_constraintBottom_toTopOf="@id/tv_tracks_label"
        app:layout_constraintStart_toStartOf="@id/tv_title_label"
        app:layout_constraintTop_toBottomOf="@id/tv_artist_label" />

    <TextView
        android:id="@+id/tv_available"
        style="@style/styleTextH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/tv_available_label"
        app:layout_constraintStart_toEndOf="@id/tv_available_label"
        app:layout_constraintTop_toTopOf="@id/tv_available_label"
        tools:text="Oui" />

    <TextView
        android:id="@+id/tv_tracks_label"
        style="@style/styleTextH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_nb_tracks"
        app:layout_constraintBottom_toBottomOf="@id/iv_cover"
        app:layout_constraintStart_toStartOf="@id/tv_title_label"
        app:layout_constraintTop_toBottomOf="@id/tv_available_label" />

    <TextView
        android:id="@+id/tv_tracks"
        style="@style/styleTextH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_m"
        app:layout_constraintBottom_toBottomOf="@id/tv_tracks_label"
        app:layout_constraintStart_toEndOf="@id/tv_tracks_label"
        app:layout_constraintTop_toTopOf="@id/tv_tracks_label"
        tools:text="10" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_l"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/iv_cover" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:layoutAnimation="@anim/layout_animation"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider"
        tools:listitem="@layout/item_track" />

</androidx.constraintlayout.widget.ConstraintLayout>